# shamir_compound

./: CMakeLists.txt  big_math_functions.cpp  big_math_functions.h  main.cpp  random_generator.cpp  random_generator.h  secret_part.cpp  secret_part.h  shamir_compound.cpp  shamir_compound.h  shamir_separation.cpp  shamir_separation.h
